# resic

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/workflows/: continuous-integration.yml  label-pull-request.yml
src/: lib.rs
